Changelog Notes:
Fix Well-Fitted not retaining stats when reloading game.